<resources>
    <string name="app_name">Reservation</string>
    <string name="full_name">Full Name:</string>
    <string name="phone">Phone:</string>
    <string name="no_of_people">No. of People:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="smoking_table">Smoking Table?</string>
</resources>
